# chise

chise-base/: ChangeLog  README.en  bootstrap.debian  configure  configure.in
chise-core/: Makefile.in  bootstrap.fink  bootstrap.macports
chise-core-/: ChangeLog  Makefile
chise-fonts-installer/: ChangeLog  Makefile.in  chise-setup-xfonts.in  configure  configure.in
chise-fonts-installer/BDF/: Makefile.in
chise-fonts-installer/BDF/CBETA/: Makefile.in
chise-fonts-installer/BDF/EGB/: Makefile.in  fonts.alias
chise-fonts-installer/BDF/ETL-VN2/: Makefile.in
chise-fonts-installer/BDF/JISX0213/: Makefile.in
chise-fonts-installer/BDF/Thai-XTIS/: Makefile.in
chise-fonts-installer/BDF/Zinbun/: Makefile.in
chise-fonts-installer/GT/: Makefile.in  encodings.dir  fonts.dir
chise-fonts-installer/TrueType/: Makefile.in
chise-fonts-installer/TrueType/Arphic/: Makefile.in  encodings.dir  fonts.dir
chise-fonts-installer/TrueType/Zinbun/: Makefile.in
concord/: ChangeLog  Makefile.in  README.en  concord-bdb.c  concord-bdb.h  concord-name.h  concord.c  concord.h  config.h.in  configure  configure.in  name.c  sysdep.h
ids/: cjk-4corner.el
kage/engine/: kagecd.js  polygons.js  sample.as  sample.html  sample.js
kage/glyphwiki/: en.txt  ko.txt  zh.txt
kage/kagecgi/: Makefile  README.en  kage.h  kagecd.c  kagecgi.c  kagecgi.h  kagechar.c  kagecomb.c  kagedb.c  kagedf.c  kageeg.c  kageic.c  kagepng.c  kagepoly.c  kagestr.c  kagestr.h  kagetool.c  sysdep.h
kage/kagedb/: alias.txt  getaliastxt.pl  getpartstxt.pl  index.cgi  makealiasdb.pl  makeidsdb.pl  makepartsdb.pl  parts.txt  readme.en
kage/linkmap/: map.cgi  map.css  map.pl
kage/makettf/: checkdata.cgi  checkdata.html  index.html  makettf.cgi  makettf.pl
kage/tools/: chise.i  sample.pl
libchise/: ChangeLog  Makefile.in  README.en  chise.c  chise.h  configure  configure.in  sample.c  sysdep.h
omega/: INSTALL-MacOS-X.txt.ja  INSTALL.txt  INSTALL.txt.ja  add_adobecid.pl  chise.sty  eps2t1.pfe  inCHISE  inCHISE-5.6  makefonts.pl  mklink.pl  svg2t1.pfe  test.tex  testmulti.tex
omega/chise2otf/: INSTALL.txt.ja  chise2otf  chise2otf-5.6  chiseotf.sty  extaccent.sty  test.tex  u8j2otfk
package/fink/: README.txt.ja
perl/: CHISE.pm  CHISE_REG.pm  chisereg.pl  sample1.pl  sample2.pl  sample3.pl
perl/Chise_utils/: Changes  Chise_utils.pm  MANIFEST  Makefile.PL  test.pl
ruby/: ChangeLog  Makefile  README.en  README.ja  chise.rb
ruby/chise/: char.rb  character.rb  chisedb.rb  codeviewer.rb  config.rb  csf.rb  db.rb  defkanji.rb  graphviz.rb  iconv.rb  ids.rb  idsdb.rb  idstree.rb  kage.rb  kageserver.rb  kanjilist.rb  libchise.rb  libchise_r.rb  makegraph.rb  management.rb  network.rb  org-character.rb  org-string.rb  parser.rb  path.rb  qp.rb  string.rb  stroke.rb  utf8.rb  util.rb  version.rb
ruby/doc/: index.html.en  index.html.ja  style.css
ruby/ext/: .cvsignore  README.ja  cleanlibchise  config.h  extconf.rb  getlibchise  libchise_c.c  sample.rb
ruby/sample/: .cvsignore  sample-lc2003.rb  sample1.rb  t1.rb  t10.rb  t14.rb  t15.rb  t2.rb  t3.rb  t4.rb  t5.rb  t6.rb  t7.rb  t8.rb  t9.rb  test1.rb
ruby/test/: .cvsignore  Makefile  all.rb  common.rb  org-test-char.rb  org-test-db.rb  org-test-ids.rb  org-test-kage.rb  org-test-str.rb  test-char.rb  test-chisedb.rb  test-config.rb  test-defkanji.rb  test-iconv.rb  test-ids.rb  test-idsdb.rb  test-idstree.rb  test-kanjilist.rb  test-libchise.rb  test-libchise_r.rb  test-management.rb  test-parser.rb  test-path.rb  test-string.rb  test-utf8.rb
ruby/tools/: .cvsignore  Makefile  define-kanji-meaning.rb  dump-database.rb  make-chisedb-tarball.rb  make-ids-database.rb  move-obsolete-files.rb  rename-files.rb  trim_bom.rb
specs/: ChangeLog  char-atr.ja.txt  chise-elisp_ja.tex
tomoyo-tools/: ChangeLog  Makefile  TOMOYO-CFG  TOMOYO-ELS  TOMOYO-MK  char-db-dump.el  check-mule.el  conv-util.el  csv.el  dump-tables.el  ftp.in  ideo-trans.el
uptex-chise/elisp/: ChangeLog  chise-tex.el
uptex-chise/platex/: ChangeLog  chiseotf.sty  extaccent.sty
uptex-chise/uplatex/: ChangeLog  chiseotf.sty  extaccent.sty
www/: ChangeLog  chise.css  history.html.ja.iso-2022-jp  index.html.en  index.html.ja.utf-8
www/News/: 20030315.html.ja.iso-2022-jp  20030315.txt.ja.iso-2022-jp  20051013-15.html.ja.iso-2022-jp  index.html.ja.iso-2022-jp
www/char-data/: CBETA-to-UCS.txt  index.html.ja.iso-2022-jp
www/glyph/: index.html.ja.iso-2022-jp
www/ids/: index.html.ja.iso-2022-jp
www/omega/: index.html.ja.iso-2022-jp
www/papers/: chise-m17n-2001.txt
www/perl/: index.html.ja.iso-2022-jp
www/ruby/: index.html.ja.iso-2022-jp
www/symposium2003/: index.html.ja.iso-2022-jp
www/topicmaps/: index.html.ja.iso-2022-jp
www/visualization/: index.html.ja.iso-2022-jp
www/xemacs/: builtin-char.html.ja.iso-2022-jp  index.html.ja.iso-2022-jp  install.debian.ja.html  install.mac-os-x.ja.html.iso-2022-jp
xemacs/: .cvsignore  ChangeLog  INSTALL  Makefile.in.in  PROBLEMS  configure  configure.in  version.sh
xemacs/dynodump/: _dynodump.h  dynodump.c  syms.c
xemacs/etc/: CHISE-VERSIONS  ETAGS.ChangeLog  NEWS  OXYMORONS  PACKAGES  TUTORIAL  package-index.LATEST.gpg
xemacs/info/: .cvsignore
xemacs/lib-src/: .cvsignore  ChangeLog  etags.c  fakemail.c  gnuclient.c  gnuslib.c  installexe.sh  movemail.c  pop.c  pop.h  rcs2log  winclient.c
xemacs/lisp/: .cvsignore  ChangeLog  about.el  auto-autoloads.el  autoload.el  bytecomp.el  code-process.el  derived.el  dump-paths.el  dumped-lisp.el  easy-mmode.el  easymenu.el  files.el  (+21 more)
(+773 files in other folders)
