#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(chise-fonts-installer, 0.2, chise-en@m17n.org)

AC_CANONICAL_TARGET

# Checks for programs.
# AC_PROG_CC
# AC_PROG_LIBTOOL
#  AC_CHECK_PROGS(LIBTOOL, glibtool libtool, libtool, \
#  	/usr/local/bin:/opt/bin:/sw/bin:/usr/bin:/bin)

AC_SUBST(ac_configure_args)

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
#AC_C_CONST
#AC_C_INLINE

# Checks for library functions.
#AC_FUNC_ALLOCA
#AC_FUNC_STRNLEN

#AC_CHECK_FUNCS(strnlen)

AC_CONFIG_FILES([chise-setup-xfonts])
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([BDF/Makefile])
AC_CONFIG_FILES([BDF/JISX0213/Makefile])
AC_CONFIG_FILES([BDF/EGB/Makefile])
AC_CONFIG_FILES([BDF/ETL-VN2/Makefile])
AC_CONFIG_FILES([BDF/Thai-XTIS/Makefile])
AC_CONFIG_FILES([BDF/Zinbun/Makefile])
AC_CONFIG_FILES([BDF/CBETA/Makefile])
AC_CONFIG_FILES([TrueType/Makefile])
AC_CONFIG_FILES([TrueType/Arphic/Makefile])
AC_CONFIG_FILES([TrueType/Zinbun/Makefile])
AC_CONFIG_FILES([GT/Makefile])
AC_OUTPUT
